--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>TESTE AWS CODE DEPLOY</title>
+    <title>RESULTADO - AWS CODE DEPLOY</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
   </head>
@@ -14,7 +14,7 @@
           <a href="/index.html"
             ><img
               src="/hipno.gif"
-              alt="P&aacute;gina Teste AWS CODE DEPLOY"
+              alt="P&aacute;gina Resultante do AWS CODE DEPLOY - Update Group"
               width="107"
               height="169"
               border="0"
